@startuml

title __UTILS's Class Diagram__\n

  package com.utilisateur.orthomem {
    package com.utilisateur.orthomem.utils {
      class ItemClickSupport {
          - mRecyclerView : RecyclerView
          - mItemID : int
          - mOnClickListener : OnClickListener
          - mOnLongClickListener : OnLongClickListener
          - mAttachListener : OnChildAttachStateChangeListener
          - ItemClickSupport()
          {static} + addTo()
          {static} + removeFrom()
          + setOnItemClickListener()
          + setOnItemLongClickListener()
          - detach()
      }
    }
  }
  

  package com.utilisateur.orthomem {
    package com.utilisateur.orthomem.utils {
      interface OnItemClickListener {
          {abstract} + onItemClicked()
      }
    }
  }
  

  package com.utilisateur.orthomem {
    package com.utilisateur.orthomem.utils {
      interface OnItemLongClickListener {
          {abstract} + onItemLongClicked()
      }
    }
  }
  

  ItemClickSupport o-- OnItemClickListener : mOnItemClickListener
  ItemClickSupport o-- OnItemLongClickListener : mOnItemLongClickListener
  ItemClickSupport +-down- OnItemClickListener
  ItemClickSupport +-down- OnItemLongClickListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
